--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "start": "node dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -20,16 +21,29 @@
   "homepage": "https://github.com/xiaosunJessica/vue-study#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.16",
-    "element-theme-default": "^1.3.7",
-    "element-ui": "^1.3.7"
-  },
-  "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
     "postcss-loader": "^2.0.6",
     "resolve-url-loader": "^2.1.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9"
+  },
+  "dependencies": {
+    "element-theme-default": "^1.3.7",
+    "element-ui": "^1.3.7",
+    "express": "^4.15.3",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "vue": "^2.4.1",
+    "vue-loader": "^12.2.2",
+    "vue-template-compiler": "^2.4.1",
+    "webpack": "^3.3.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
