--- a/package.json
+++ b/package.json
@@ -30,9 +30,14 @@
     "postcss-loader": "^2.0.6",
     "resolve-url-loader": "^2.1.0",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.3.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
+    "element-theme": "^0.7.2",
     "element-theme-default": "^1.3.7",
     "element-ui": "^1.3.7",
     "express": "^4.15.3",
@@ -40,10 +45,7 @@
     "sass-loader": "^6.0.6",
     "vue": "^2.4.1",
     "vue-loader": "^12.2.2",
-    "vue-template-compiler": "^2.4.1",
-    "webpack": "^3.3.0",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-dev-server": "^2.5.1",
-    "webpack-hot-middleware": "^2.18.2"
+    "vue-router": "^2.7.0",
+    "vue-template-compiler": "^2.4.1"
   }
 }
