--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "homepage": "https://github.com/xiaosunJessica/vue-study#readme",
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.16",
-    "extract-text-webpack-plugin": "^3.0.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "fetch-mock": "^5.12.1",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "postcss-loader": "^2.0.6",
