--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "element-theme": "^0.7.2",
     "element-theme-default": "^1.3.7",
     "element-ui": "^1.3.7",
@@ -47,6 +50,7 @@
     "vue": "^2.4.1",
     "vue-loader": "^12.2.2",
     "vue-router": "^2.7.0",
-    "vue-template-compiler": "^2.4.1"
+    "vue-template-compiler": "^2.4.1",
+    "vuex": "^2.3.1"
   }
 }
