--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^7.1.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "eslint": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "fetch-mock": "^5.12.1",
     "file-loader": "^0.11.2",
