--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "element-theme-default": "^1.3.7",
     "element-ui": "^1.3.7",
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.4.1",
